# simple_dag

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  simple_dag.datahandlers.rst  simple_dag.orchestrators.rst  simple_dag.rst  simple_dag.transforms.rst  simple_pipeline.rst  toc.rst  usage.rst
examples/: dag.py  simple_transform.py
examples/airports/: airport.py
examples/ds_salaries/: ds_salaries.py
simple_dag/: __init__.py  transforms.py
simple_dag/datahandlers/: base_handler.py  binary_handler.py  directory_handler.py  filepath_handler.py  json_handler.py  multiple.py  pandas_handler.py  spark_handler.py
simple_dag/orchestrators/: dagster.py
simple_dag/utils/: fsspec.py  s3.py
simple_pipeline/: __init__.py  cli.py  dagster.py  transforms.py
simple_pipeline/datahandlers/: base_handler.py  binary_handler.py  pandas_handler.py  spark_handler.py
tests/: __init__.py  test_simple_pipeline.py
