[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "simple_pipeline"
version = "0.1.0"
description = "Create simple Pipelines with Python"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [{name = "Tim Rohner", email = "info@timrohner.ch"}]
keywords = ["simple_pipeline"]
# homepage = "https://github.com/leokster/simple_pipeline"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    "Click>=7.0",
    "dagit>=1.3.4",
    "dagster>=0.10.0",
]


[project.scripts]
simple_pipeline = "simple_pipeline.cli:main"

[project.urls]
Source = "https://github.com/leokster/simple_pipeline"


[project.optional-dependencies]
dev = [
    "pip >=19.2.3, <= 23.1.2",
    "bump2version >=0.5.11, <= 1.0.1",
    "wheel >=0.33.6, <= 0.40.0",
    "watchdog >=0.9.0, <= 3.0.0",
    "flake8 >=3.7.8, <= 3.7.8",
    "tox >=3.14.0, <= 4.5.1",
    "coverage >=4.5.4, <= 7.2.5",
    "Sphinx >=1.8.5, <= 6.2.1",
    "sphinx-rtd-theme >= 1.2.0, <= 1.2.0",
    "twine >=1.14.0, <= 1.14.0",
    "Click >=7.1.2, <= 8.1.3",
    "pytest >=6.2.4, <= 7.3.1",
    "black >=21.7b0, <= 23.3.0"
]

[tool.setuptools.packages.find]
include = ["simple_pipeline", "simple_pipeline.*"]

# [tool.setuptools.package-data]
# "*" = ["*.html"]

[tool.setuptools_scm]
write_to = "simple_pipeline/_version.py"
