[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_dag"
dynamic = ["version"]
description = "Create simple Pipelines with Python"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Tim Rohner", email = "info@timrohner.ch"}]
keywords = ["simple_dag"]
# homepage = "https://github.com/leokster/simple_dag"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    "Click>=7.0, <= 8.1.7",
    "dagit >= 1.3.7, <= 1.5.13",
    "dagster >= 1.3.7, <= 1.5.13",
    "matplotlib >=3.4.2, <=3.8.2",
    "pandas >=2.0.1, <=2.1.4"
]


[project.scripts]
simple_dag = "simple_dag.cli:main"

[project.urls]
Source = "https://github.com/leokster/simple_dag"


[project.optional-dependencies]
dev = [
    "black >=21.7b0, <= 23.3.0",
    "tox >=3.14.0, <= 4.5.1",
    "twine >=1.14.0, <= 4.0.2"
]


[tool.setuptools.packages.find]
include = ["simple_dag", "simple_dag.*"]

# [tool.setuptools.package-data]
# "*" = ["*.html"]

[tool.setuptools_scm]
write_to = "simple_dag/_version.py"
